--- a/templates/base.html
+++ b/templates/base.html
@@ -44,3 +44,11 @@
 
   </body>
 </html>
+<html>
+  <head>
+  <title>{{title}} - BLOG</title>
+  </head>
+  <body>
+    <div>BLOG: <a href="login.html">Home</a></div>
+  </body>
+</html>
