--- a/templates/login.html
+++ b/templates/login.html
@@ -12,42 +12,25 @@
     margin: 20px; /* Значение отступов */
     background: #ffffff;
 </style>
+<style>
+   .b1 {
+    background: green; /* Синий цвет фона */
+    color: white; /* Белые буквы */
+    font-size: 9pt; /* Размер шрифта в пунктах */
+   }
+  </style>
 <body>
 
-<!--Контейнер для формы -->
-{% extends "base.html" %}
 
-{% block content %}
-<script type = 'text/javascript'>
-function set_openid(openid, pr)
-{
-    u = openid.search('<username>')
-    if (u != -1) {
-        // openid requires username
-        user = prompt('Enter your ' + pr + ' username:')
-        openid = openid.substr(0, u) + user
-    }
-    form = document.forms['login'];
-    form.elements['openid'].value = openid
-}
-</script>
 <form action="" method="post" name="login">
-    {{form.hidden_tag()}}
+
 <div><fieldset>
     <pre><input type="text" placeholder="nickname" required maxlength="13" autocomplete="on"></pre>
     <pre><input type="text" placeholder="password" required minlength="8" autocomplete="on"> </pre>
-    <input class="b1" type="image" width="200" height="50" src="https://smstoconnect.com/wp-content/uploads/2020/02/log-in-button-png-17.png" value="                        Login">
-    <p><small>No registered</small> <a href="/index"> <small>Create an account</small></a></p>
-</fieldset>
-</div></form>
-{% for error in form.errors.openid %}
-<span style="color: red;">[{{error}}]</span>
-{% endfor %}<br>
-|{% for pr in providers %}
-<a href="javascript:set_openid('{{pr.url}}', '{{pr.name}}');">{{pr.name}}</a> |
-    {% endfor %}
-<p>{{form.remember_me}} Remember Me</p>
+    <p><input type="button" class= "b1" value="Sign in"></p>
+    <p><input type="button" value="Sign up" color=""></p>
+</fieldset></div>
+
 </form>
-{% endblock %}
 </body>
 </html>
